restore source-faithful schema parity across the application-data seam
Resolves all 8 code review findings for the Order-1 Application-Data /
Authoritative-Schema Seam checkpoint (1 CRITICAL, 6 MAJOR, 1 MINOR). The
authoritative reference throughout is the retired backend/app/db/models.py,
recovered from git history, per AAP G2 and review rule CR-SA3.

C1 CRITICAL - Schema type chain restored to 32-bit identifiers.
The identifier type had been taken from AAP 0.4.1.4's prose (JpaRepository
<Tweet, Long>) rather than the authoritative source column Column(Integer,
primary_key=True), producing a coherent but wrong Long/BIGINT chain; AiTool
was an outright regression from order-0. Converted the whole chain atomically
to Integer: Tweet, Response and AiTool id fields, accessors and equals locals;
all three JpaRepository type arguments; ResponseService (Integer.valueOf) and
TwitterService (Integer.parseInt); both mappers. IDENTITY generation and the
decimal-String wire boundary are unchanged, and an out-of-32-bit-range path
identifier is now reported as not-found rather than 400/500. The chain is
type-locked: reverting one entity to Long no longer compiles.

C2 MAJOR - One authorized delimited-list codec.
Withdrew the backslash escape grammar, which had created a second
representation while the Notion mirror kept the first and which silently
rewrote pre-existing column values containing a backslash. Restored the frozen
simple comma codec (AAP DL-024) and exposed it as encode/decode public
statics; NotionService now delegates both paths to it, so exactly one
implementation serves the column and the mirror.

C3 MAJOR - Persist-only per-key seeding.
saveAndFlush on an assigned String @Id routed through EntityManager.merge,
which could overwrite an operator row inserted concurrently. Seeding now
issues EntityManager.persist plus flush inside a PROPAGATION_REQUIRES_NEW
per-key transaction; a duplicate key is treated as already-exists and the
stored row is left exactly as it sta